fixed margin for .screenshots on mobile viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,8 +99,8 @@ a:active {
  	margin-bottom:9rem;
  	background-color: rgba(96,96,96,.5);
  	border-radius: 10px;
- 	margin-left:15rem;
- 	margin-right:15rem;
+ 	margin-left:6rem;
+ 	margin-right:6rem;
  	padding-left:0;
 
 }
@@ -211,6 +211,16 @@ media (min-width: 700px) {
 	font-size:2.5rem;
 	padding: 3rem 1rem;
 }
+
+.screenshots {
+  	text-align:center;
+ 	margin-bottom:9rem;
+ 	background-color: rgba(96,96,96,.5);
+ 	border-radius: 10px;
+ 	margin-left:15rem;
+ 	margin-right:15rem;
+ 	padding-left:0;
+ }
 
 .screenshots li {
 	display:inline;
